# Soroban-Registry

./: .env.example  CHANGELOG.md  COMPLIANCE_IMPLEMENTATION.md  COMPLIANCE_QUICKSTART.md  COMPLIANCE_TESTING.md  COMPLIANCE_TOOLKIT.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  docker-compose.yml
.github/scripts/: check-migration-immutability.sh  test-migration-immutability.sh
.github/workflows/: ci.yml  validate-migrations.yml
backend/: Cargo.toml
backend/api/: CORS_POLICY.md  Cargo.toml
backend/api/src/: abi_versioning_handlers.rs  api_versioning.rs  auth_handlers.rs  backup_handlers.rs  batch_verify_handlers.rs  breaking_changes.rs  cache.rs  changelog_handlers.rs  compliance_handlers.rs  config.rs  db_monitoring.rs  db_pool.rs  db_resilience.rs  dependency.rs  deprecation_handlers.rs  error.rs  error_logging.rs  feature_flags.rs  formal_verification.rs  formal_verification_integration.rs  gas_estimate_handlers.rs  handlers.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  metrics_handler.rs  onchain_verification.rs  openapi.rs  patch_handlers.rs  publisher_verification_handlers.rs  rate_limit.rs  resource_handlers.rs  routes.rs  search_postgres.rs  security.rs  service_health.rs  state.rs  subscription_handlers.rs  (+5 more)
backend/api/src/ai/: service.rs
backend/api/src/crypto/: cipher.rs  key_manager.rs  mod.rs  service.rs
backend/api/src/simulation/: wasm_validator.rs
backend/api/tests/: batch_info_v1.rs  database_replication_ha_tests.rs  database_validation_constraints_tests.rs  deployments_v1.rs  formal_verification_integration_tests.rs  multitenancy_tests.rs  registry_monitoring_alerting_tests.rs  search_filter_tests.rs
backend/shared/: Cargo.toml
backend/shared/src/: error.rs  lib.rs  logging.rs  models.rs
backend/shared/src/compliance/: audit.rs  certification.rs  frameworks.rs  mod.rs  remediation.rs  reports.rs
backend/soroban-batch/: Cargo.toml
backend/verifier/: Cargo.toml
cli/: Cargo.toml
cli/src/: cache.rs  changelog.rs  commands.rs  compare.rs  compliance.rs  config.rs  contract_dependency.rs  events.rs  gas.rs  logs.rs  main.rs  notification.rs  patch.rs  profiler.rs
cli/tests/: list_integration.rs
database/migrations/: 009_trust_scoring.sql  012_verification_build_logs.sql  062_add_dependency_type.sql  078_stats_aggregates.sql  20260222000000_add_changelog.sql  20260223000000_gas_estimation_history.sql  20260329000001_contract_clone_federation.sql  20260329093000_add_contract_verification.sql  20260329093001_add_contract_verification_columns.sql  20260330000001_contract_notification_system.sql  20260427000004_issue732_contract_usage_stats.sql  20260530000400_create_audit_logs.sql  20260531010001_issue888_signature_verification.sql  20260531020001_issue949_composite_indexes.sql  20260601000000_database_validation_constraints.sql  20260601000001_issue889_formal_verification_integration.sql  20260602000000_add_tag_color.sql
docs/: ALERTING.md  API_VERSIONING.md  CHANGELOG_GENERATION.md  CLI_LOGS.md  ENCRYPTION.md  WEBHOOKS.md  database-high-availability.md
docs/migrations/: v1-to-v2.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  stellar-sdk.d.ts
frontend/app/: page.tsx
frontend/lib/: api.ts
scripts/: ci-check.sh
(+24 files in other folders)
