[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
openapi = ["dep:utoipa-swagger-ui"]

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
contract_abi = { path = "../contract_abi" }
verifier = { path = "../verifier" }
soroban-batch = { path = "../../soroban-registry/crates/soroban-batch" }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-appender = "0.2"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
# `log::LevelFilter` for sqlx ConnectOptions::log_slow_statements (slow-query logging).
log = "0.4"
# secp256k1 ECDSA verification for the contract signature system (#888).
k256 = { version = "0.13", features = ["ecdsa"] }
moka = { version = "0.12.13", features = ["future"] }
async-trait = "0.1.89"
lru = "0.16.3"
async-recursion = "1.1.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonwebtoken = "9.3.0"
tokio-tungstenite = { workspace = true }
regex = "1.10"
lazy_static = "1.4"
hmac = "0.12"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
