[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono", "json", "rust_decimal"] }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
utoipa = { workspace = true }
base64 = { workspace = true }
rust_decimal = "1.35"
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
